fixing some presentaton issues on ios

--- a/app/assets/stylesheets/shits.css.scss
+++ b/app/assets/stylesheets/shits.css.scss
@@ -109,12 +109,6 @@ section div p:nth-child(even) {
     letter-spacing: 0.2em;
   }
 
-  #content,
-  section {
-    height: 100%;
-    height: -webkit-calc(100% - 120px);
-  }
-
   h1, p {
     font-size: 1.5em;
   }
